# colibri-sdk

./: .gitignore  LICENSE  README.md  index.html
docs/: Colibri-Api.md  asyncapi.yaml  copy-enhancer.js  index.html  openapi.yaml  theme.js  ws.html
docs/approve/: index.html
dotnet/Colibri.Sdk/: Colibri.Sdk.csproj  ColibriClient.cs  ColibriSocket.cs  Models.cs
dotnet/Colibri.Sdk.Examples/: Colibri.Sdk.Examples.csproj  Program.cs
js/: package.json
js/examples/: account.ts  app-and-signals.ts  basic-rest.ts  live-trades.ts  market-data.ts  orderbook-stream.ts  panels.ts  stream-all.ts  trading.ts
js/src/: client.ts  index.ts  socket.ts  types.ts
python/: README.md  pyproject.toml
python/colibri/: __init__.py  client.py  socket.py
python/examples/: account.py  app_and_signals.py  basic_rest.py  live_trades.py  market_data.py  panels.py  stream_all.py  trading.py
