[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "colibri-sdk"
version = "0.1.0"
description = "Official Python SDK for the Colibri Local API — read the order book, stream trades, and trade from a widget or bot."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["colibri", "trading", "orderbook", "websocket", "crypto", "scalping"]
dependencies = ["websocket-client>=1.6"]

[tool.hatch.build.targets.wheel]
packages = ["colibri"]
